--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,29 @@ body {
     -webkit-text-stroke: 1px white;
   }
 
+  /* Общий стиль для скроллбара */
+  ::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+  }
+
+  /* Стиль для полосы прокрутки */
+  ::-webkit-scrollbar-track {
+    background: #1a1a1a; /* Темный фон, подходящий к общей теме */
+    border-radius: 10px;
+  }
+
+  /* Стиль для ползунка прокрутки */
+  ::-webkit-scrollbar-thumb {
+    background: linear-gradient(45deg, #15035b, #0d111f); /* Плавный градиент из розового и фиолетового, как в аватарах */
+    border-radius: 10px;
+  }
+
+  /* Эффект при наведении на ползунок */
+  ::-webkit-scrollbar-thumb:hover {
+    background: linear-gradient(45deg, #ff80ab, #b388ff); /* Светлый градиент для эффекта при наведении */
+  }
+
   :root {
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
